сбой при запуске но запускается добавлена @Lazy что неправильно

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-# hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create-drop
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
