--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # Hibernate properties
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 # hibernate.hbm2ddl.auto=create-drop
