--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.datasource.password=root
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-# hibernate.hbm2ddl.auto=create-drop
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=update
+
 
